native/src/WDMTMKv2.h

#define BUSY 0x02
#define BC_MODE 0x00
#define RT_MODE 0x80
#define MT_MODE 0x100
#define UNDEFINED_MODE 0xFFFF
typedef struct
{
  int nInt;
  unsigned short wMode;
  union
  {
    struct
    {
      unsigned short wResult;
      unsigned short wAW1;
      unsigned short wAW2;
    } bc;
    struct
    {
      unsigned short wBase;
      unsigned short wResultX;
    } bcx;
    struct
    {
      unsigned short wStatus;
      unsigned short wCmd;
    } rt;
    struct
    {
      unsigned short wBase;
      unsigned short wResultX;
    } mt;
    struct
    {
      unsigned short wStatus;
    } mrt;
    struct
    {
      unsigned short wRequest;
//      DWORD dwTimer;
    } tmk;
  };
} TTmkEventData;
SHARED_LIB DWORD TmkOpen();
 
SHARED_LIB void TmkClose();
SHARED_LIB void tmkgetevd(TTmkEventData *pEvD);
SHARED_LIB void tmkdefevent(HANDLE hEvent, BOOL fEventSet);
SHARED_LIB int tmkgetmaxn();
SHARED_LIB int tmkconfig(int tmkNumber);
SHARED_LIB int tmkdone(int tmkNumber);
SHARED_LIB int tmkselect(int tmkNumber);
SHARED_LIB int tmkselected();
SHARED_LIB TMK_DATA tmkgetmode();
SHARED_LIB void tmksetcwbits(TMK_DATA tmkSetControl);
SHARED_LIB void tmkclrcwbits(TMK_DATA tmkClrControl);
SHARED_LIB TMK_DATA tmkgetcwbits();
SHARED_LIB int bcreset();
SHARED_LIB int bcdefirqmode(TMK_DATA bcIrqMode);
SHARED_LIB TMK_DATA bcgetirqmode();
SHARED_LIB TMK_DATA bcgetmaxbase();
SHARED_LIB int bcdefbase(TMK_DATA bcBasePC);
SHARED_LIB TMK_DATA bcgetbase();
SHARED_LIB void bcputw(TMK_DATA bcAddr, TMK_DATA bcData);
SHARED_LIB TMK_DATA bcgetw(TMK_DATA bcAddr);
SHARED_LIB DWORD bcgetansw(TMK_DATA bcCtrlCode);
SHARED_LIB void bcputblk(TMK_DATA bcAddr, void *pcBuffer, TMK_DATA cwLength);
SHARED_LIB void bcgetblk(TMK_DATA bcAddr, void *pcBuffer, TMK_DATA cwLength);
SHARED_LIB int bcdefbus(TMK_DATA bcBus);
SHARED_LIB TMK_DATA bcgetbus();
SHARED_LIB int bcstart(TMK_DATA bcBase, TMK_DATA bcCtrlCode);
SHARED_LIB int bcdeflink(TMK_DATA bcBase, TMK_DATA bcCtrlCode);
SHARED_LIB DWORD bcgetlink();
SHARED_LIB TMK_DATA bcstop();
SHARED_LIB DWORD bcgetstate();
SHARED_LIB int rtreset();
SHARED_LIB int rtdefirqmode(TMK_DATA rtIrqMode);
SHARED_LIB TMK_DATA rtgetirqmode();
SHARED_LIB int rtdefaddress(TMK_DATA rtAddress);
SHARED_LIB TMK_DATA rtgetaddress();
SHARED_LIB void rtdefsubaddr(TMK_DATA rtDir, TMK_DATA rtSubAddr);
SHARED_LIB TMK_DATA rtgetsubaddr();
SHARED_LIB void rtputw(TMK_DATA rtAddr, TMK_DATA rtData);
SHARED_LIB TMK_DATA rtgetw(TMK_DATA rtAddr);
SHARED_LIB void rtputblk(TMK_DATA rtAddr, void *pcBuffer, TMK_DATA cwLength);
SHARED_LIB void rtgetblk(TMK_DATA rtAddr, void *pcBuffer, TMK_DATA cwLength);
SHARED_LIB void rtsetanswbits(TMK_DATA rtSetControl);
SHARED_LIB void rtclranswbits(TMK_DATA rtClrControl);
SHARED_LIB TMK_DATA rtgetanswbits();
SHARED_LIB TMK_DATA rtgetstate();
SHARED_LIB TMK_DATA rtbusy();